# snapper

./: Cargo.toml  README.md  TODO.md
cargo-snapper/: Cargo.toml
cargo-snapper/assets/: Snapper.toml  build.rs
cargo-snapper/src/: main.rs
cargo-snapper/src/commands/: args.rs  init.rs  mod.rs  network.rs  new.rs  script.rs
cargo-snapper/src/config/: mod.rs
cargo-snapper/src/utils/: mod.rs  project.rs  scripts.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  platform.rs  profile.rs  project.rs  snapper_file.rs
ethers/: Cargo.toml
node/: Cargo.toml
provider/: Cargo.toml
signers/: Cargo.toml
signers/src/: lib.rs  prelude.rs
snapper/: Cargo.toml
snapper/src/: lib.rs
solc/: Cargo.toml
solc/contracts/: Lock.sol
solc/src/: builder.rs  config.rs  error.rs  lib.rs  solc.rs  utils.rs  version.rs
solc/src/api/: input.json  input.rs  mod.rs  output.json  output.rs
utils/: parse.py  solidity.json
