[workspace]
resolver = "2"
members = ["cargo-snapper", "core", "build", "solc", "snapper"]

[workspace.package]
authors = ["tiannian <dtiannian@gmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
snapper-build = { version = "0.1", path = "build" }
snapper-solc = { version = "0.1", path = "solc" }
snapper-core = { version = "0.1", path = "core" }

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
log = "0.4.17"
env_logger = "0.10.0"
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }

cargo_metadata = "0.15.4"

toml_edit = "0.19.8"
colored = "2.0.0"
