[package]
name = "cargo-snapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "snapper"
path = "src/main.rs"

[dependencies]
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
clap.workspace = true

cargo_metadata.workspace = true

toml_edit.workspace = true
colored.workspace = true
