[package]
name = "snapper-solc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
primitive-types = { version = "0.12.1", features = ["serde"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "fs"] }

snapper-core = { version = "0.1", path = "../core" }
toml = "0.7.4"

[dev-dependencies]
serde_json = "1.0.96"
