[package]
name = "snapper-solc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
primitive-types = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"

snapper-core = { version = "0.1", path = "../core" }
toml = "0.7.4"
serde_json = "1.0.96"
attohttpc = { version = "0.25.0", features = ["json"] }
anyhow = "1.0.72"

[dev-dependencies]
serde_json = "1.0.96"
