[package]
name = "snapper-solc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snapper-core.workspace = true

anyhow.workspace = true

futures-util = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
primitive-types = { version = "0.12.1", features = ["serde"] }
thiserror = "1.0.40"

serde.workspace = true
toml.workspace = true
serde_json.workspace = true

attohttpc = { version = "0.25.0", features = ["json"] }
